# schirlitz

./: Cargo.toml
src/: bot.rs  database.rs  main.rs
