[package]
name = "shtirlitz-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot.git" }
tokio = { version = "1.17.0", features = ["fs", "macros", "rt-multi-thread"]}
rusqlite = { version = "0.27.0" , features = ["time"]}
time = "0.3.7"
futures = "0.3"
rand = "0.8.5"